--- a/pages/index.html
+++ b/pages/index.html
@@ -175,7 +175,7 @@
           construction services.</p>
         <ul class="services__list">
           <li class="services__item">
-            <a href="./sesrvicesDesign.html">
+            <a href="./servicesDesign.html">
               <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"
                 class="item-icon">
                 <path
@@ -189,7 +189,7 @@
             </a>
           </li>
           <li class="services__item">
-            <a href="./sesrvicesDesign.html">
+            <a href="./servicesDesign.html">
               <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"
                 class="item-icon">
                 <path
@@ -207,7 +207,7 @@
             </a>
           </li>
           <li class="services__item">
-            <a href="./sesrvicesDesign.html">
+            <a href="./servicesDesign.html">
               <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"
                 class="item-icon">
                 <g clip-path="url(#clip0_1270_3714)">
@@ -232,7 +232,7 @@
             </a>
           </li>
           <li class="services__item">
-            <a href="./sesrvicesDesign.html">
+            <a href="./servicesDesign.html">
               <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"
                 class="item-icon">
                 <path
