add offer section html

--- a/pages/servicesDesign.html
+++ b/pages/servicesDesign.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>INTERIOR DESIGN</title>
-      <link rel="stylesheet" href="../styles/main.css" />
+    <link rel="stylesheet" href="../styles/main.css" />
   </head>
   <body>
     <header class="header" id="header">
@@ -71,6 +71,30 @@
             alt="background"
             class="page-title__background"
           />
+        </div>
+      </section>
+      <section class="offer">
+        <div class="offer__container container">
+          <img src="" alt="offer" />
+          <h2 class="offer__title title">We offer</h2>
+          <ul class="offer__list">
+            <li class="offer__item active">
+              <h3 class="item__title title">Interior design of apartments</h3>
+              <p class="item__sybtitle subtitle">
+                Adipiscing nunc arcu enim elit mattis eu placerat proin.
+                Imperdiet elementum faucibus dignissim purus. Fusce parturient
+                diam magna ullamcorper morbi semper massa ac facilisis.
+              </p>
+            </li>
+            <li class="offer__item active">
+              <h3 class="item__title title">Interior design of private houses</h3>
+              <p class="item__sybtitle subtitle">
+                Adipiscing nunc arcu enim elit mattis eu placerat proin.
+                Imperdiet elementum faucibus dignissim purus. Fusce parturient
+                diam magna ullamcorper morbi semper massa ac facilisis.
+              </p>
+            </li>
+          </ul>
         </div>
       </section>
       <section class="application">
