add offer section styles

--- a/pages/servicesDesign.html
+++ b/pages/servicesDesign.html
@@ -75,26 +75,30 @@
       </section>
       <section class="offer">
         <div class="offer__container container">
-          <img src="" alt="offer" />
-          <h2 class="offer__title title">We offer</h2>
-          <ul class="offer__list">
-            <li class="offer__item active">
-              <h3 class="item__title title">Interior design of apartments</h3>
-              <p class="item__sybtitle subtitle">
-                Adipiscing nunc arcu enim elit mattis eu placerat proin.
-                Imperdiet elementum faucibus dignissim purus. Fusce parturient
-                diam magna ullamcorper morbi semper massa ac facilisis.
-              </p>
-            </li>
-            <li class="offer__item active">
-              <h3 class="item__title title">Interior design of private houses</h3>
-              <p class="item__sybtitle subtitle">
-                Adipiscing nunc arcu enim elit mattis eu placerat proin.
-                Imperdiet elementum faucibus dignissim purus. Fusce parturient
-                diam magna ullamcorper morbi semper massa ac facilisis.
-              </p>
-            </li>
-          </ul>
+          <img src="../assets/services/offer.jpg" alt="offer" />
+          <div class="offer__content">
+            <h2 class="offer__title title">We offer</h2>
+            <ul class="offer__list">
+              <li class="offer__item active">
+                <h3 class="item__title title">Interior design of apartments</h3>
+                <p class="item__subtitle subtitle">
+                  Adipiscing nunc arcu enim elit mattis eu placerat proin.
+                  Imperdiet elementum faucibus dignissim purus. Fusce parturient
+                  diam magna ullamcorper morbi semper massa ac facilisis.
+                </p>
+              </li>
+              <li class="offer__item">
+                <h3 class="item__title title">
+                  Interior design of private houses
+                </h3>
+                <p class="item__subtitle subtitle">
+                  Adipiscing nunc arcu enim elit mattis eu placerat proin.
+                  Imperdiet elementum faucibus dignissim purus. Fusce parturient
+                  diam magna ullamcorper morbi semper massa ac facilisis.
+                </p>
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
       <section class="application">
