add steps section html

--- a/pages/servicesDesign.html
+++ b/pages/servicesDesign.html
@@ -101,6 +101,43 @@
           </div>
         </div>
       </section>
+      <section class="steps">
+        <div class="steps__container container">
+          <h2 class="steps__title title">That’s how we do it</h2>
+          <ul class="steps__list">
+            <li class="steps__item">
+              <h3 class="item__count">01</h3>
+              <h4 class="item__title title">Work Estimate</h4>
+              <p class="item__subtitle subtitle">
+                Culpa nostrud commodo ea consequat aliquip reprehenderit.
+              </p>
+            </li>
+            <li class="steps__item">
+              <h3 class="item__count">02</h3>
+              <h4 class="item__title title">Contract</h4>
+              <p class="item__subtitle subtitle">
+                Laoreet ultrices curabitur luctus quisque consequat. Leo lorem
+                velit imperdiet auctor et tempor.
+              </p>
+            </li>
+            <li class="steps__item">
+              <h3 class="item__count">03</h3>
+              <h4 class="item__title title">Mobilization</h4>
+              <p class="item__subtitle subtitle">
+                Odio massa scelerisque purus arcu sed velit eleifend cursus leo.
+              </p>
+            </li>
+            <li class="steps__item">
+              <h3 class="item__count">04</h3>
+              <h4 class="item__title title">Construction Work</h4>
+              <p class="item__subtitle subtitle">
+                Adipisicing esse aliqua aliquip qui amet. Aute eiusmod dolore
+                dolore et ad et veniam ad deserunt.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
       <section class="application">
         <div class="application-container container">
           <form action="" class="aplication__form">
