add benefits section section html

--- a/pages/servicesDesign.html
+++ b/pages/servicesDesign.html
@@ -138,6 +138,53 @@
           </ul>
         </div>
       </section>
+      <section class="benefits">
+        <div class="benefits__container container">
+          <h2 class="benefits__title title">Our benefits</h2>
+          <p class="benefits__subtitle subtitle">
+            Our mission is to set the highest standards for construction sphere.
+          </p>
+          <ul class="benefits__list">
+            <li class="benefits__item">
+              <img
+                src="../assets/icons/additional icons/ic-contract.svg"
+                alt="contract"
+                class="item__icon"
+              />
+              <h3 class="item__title title">Fixed Terms & Cost</h3>
+              <p class="item__subtitle subtitle">
+                Culpa nostrud commodo ea consequat aliquip reprehenderit. Veniam
+                velit nostrud aliquip sunt.
+              </p>
+            </li>
+            <li class="benefits__item">
+              <img
+                src="../assets/icons/additional icons/ic-helmet.svg"
+                alt="contract"
+                class="item__icon"
+              />
+              <h3 class="item__title title">Qualified Workers</h3>
+              <p class="item__subtitle subtitle">
+                Anim reprehenderit sint voluptate exercitation adipisicing
+                laborum adipisicing. Minim empor est ea.
+              </p>
+            </li>
+            <li class="benefits__item">
+              <img
+                src="../assets/icons/additional icons/ic-camera.svg"
+                alt="contract"
+                class="item__icon"
+              />
+              <h3 class="item__title title">Supervision & Control</h3>
+              <p class="item__subtitle subtitle">
+                Sit veniam aute dolore adipisicing nulla sit culpa. Minim mollit
+                voluptate ullamco proident ea ad.
+              </p>
+            </li>
+          </ul>
+          <button class="btn l-btn">Discuss a project</button>
+        </div>
+      </section>
       <section class="application">
         <div class="application-container container">
           <form action="" class="aplication__form">
