add benefits section styles

--- a/pages/servicesDesign.html
+++ b/pages/servicesDesign.html
@@ -182,7 +182,7 @@
               </p>
             </li>
           </ul>
-          <button class="btn l-btn">Discuss a project</button>
+          <button class="benefits__btn btn l-btn">Discuss a project</button>
         </div>
       </section>
       <section class="application">
