--- a/pages/servicesDesign.html
+++ b/pages/servicesDesign.html
@@ -262,6 +262,19 @@
         </div>
       </div>
     </section>
+    <section class="clients">
+      <div class="clients-container container">
+        <h2 class="clients-title title">Supported by 12+ partners</h2>
+        <ul class="clients-list">
+          <li class="client-item"><img src="../assets/partners/InDepth Consulting.png" alt="logo"></li>
+          <li class="client-item"><img src="../assets/partners/Higher Fit.png" alt="logo"></li>
+          <li class="client-item"><img src="../assets/partners/Sentinal Consulting.png" alt="logo"></li>
+          <li class="client-item"><img src="../assets/partners/Happy Home.png" alt="logo"></li>
+          <li class="client-item"><img src="../assets/partners/For Sale.png" alt="logo"></li>
+          <li class="client-item"><img src="../assets/partners/Sunset Realty.png" alt="logo"></li>
+        </ul>
+      </div>
+    </section>
       <section class="application">
         <div class="application-container container">
           <form action="" class="aplication__form">
