--- a/pages/servicesDesign.html
+++ b/pages/servicesDesign.html
@@ -702,6 +702,12 @@
               </td>
             </tr>
             <tr class="table__row">
+              <td class="table__sell">Terms</td>
+              <td class="table__sell">10 days</td>
+              <td class="table__sell">20 days</td>
+              <td class="table__sell">30 days</td>
+            </tr>
+            <tr class="table__row row__btns">
               <td></td>
               <td><button class="btn sm-btn outline">send request</button></td>
               <td><button class="btn sm-btn outline">send request</button></td>
