add tabs section html

--- a/pages/work.html
+++ b/pages/work.html
@@ -51,6 +51,32 @@
                               class="page-title__background">
                   </div>
             </section>
+            <section class="tabs">
+                  <div class="tabs__container container">
+                        <ul class="tabs__list">
+                              <li class="tabs__item">
+                                    <img src="../assets/icons/additional icons/ic-house.svg" alt="house">
+                                    <h3 class="item__title title">All Projects</h3>
+                              </li>
+                              <li class="tabs__item">
+                                    <img src="../assets/icons/additional icons/ic-construction.svg" alt="construction">
+                                    <h3 class="item__title title">Construction</h3>
+                              </li>
+                              <li class="tabs__item">
+                                    <img src="../assets/icons/additional icons/ic-plan.svg" alt="plan">
+                                    <h3 class="item__title title">Project Development</h3>
+                              </li>
+                              <li class="tabs__item">
+                                    <img src="../assets/icons/additional icons/ic-pantone.svg" alt="pantone">
+                                    <h3 class="item__title title">Interior Design</h3>
+                              </li>
+                              <li class="tabs__item">
+                                    <img src="../assets/icons/additional icons/ic-painting.svg" alt="painting">
+                                    <h3 class="item__title title">Repairs</h3>
+                              </li>
+                        </ul>
+                  </div>
+            </section>
             <section class="application">
                   <div class="application-container container">
                         <form action="" class="aplication__form">
