--- a/pages/work.html
+++ b/pages/work.html
@@ -55,7 +55,8 @@
                   <div class="tabs__container container">
                         <ul class="tabs__list">
                               <li class="tabs__item active">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48" fill="none">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48"
+                                          fill="none">
                                           <g clip-path="url(#clip0_115_1213)">
                                                 <path d="M28.9219 21.0938C26.9645 21.0938 25.2653 21.9855 24 23.6748C22.7344 21.9855 21.0352 21.0938 19.0781 21.0938C15.423 21.0938 12.75 24.0978 12.75 27.7841C12.75 32.5499 17.369 35.5437 23.0848 40.4425C23.3481 40.6681 23.6741 40.7813 24 40.7809C24.3259 40.7809 24.6519 40.6681 24.9152 40.4425C30.6379 35.5375 35.25 32.5481 35.25 27.7841C35.25 24.1007 32.5796 21.0938 28.9219 21.0938ZM24 37.5286C18.85 33.178 15.5625 30.832 15.5625 27.7841C15.5625 25.5732 17.0739 23.9063 19.0781 23.9063C21.6844 23.9063 22.6069 26.9652 22.6472 27.1036C22.8193 27.7075 23.3712 28.125 24 28.125C24.6306 28.125 25.184 27.705 25.3539 27.0978C25.363 27.0659 26.2782 23.9063 28.9219 23.9063C30.9258 23.9063 32.4375 25.5732 32.4375 27.7841C32.4375 30.8346 29.1456 33.1816 24 37.5286Z"
                                                       fill="white" />
@@ -71,14 +72,16 @@
                                     <h3 class="item__title title">All Projects</h3>
                               </li>
                               <li class="tabs__item">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48" fill="none">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48"
+                                          fill="none">
                                           <path d="M46.5938 25.4062C47.3704 25.4062 48 24.7766 48 24V13.5C48 12.7234 47.3704 12.0938 46.5938 12.0938C45.6135 12.0938 26.4628 12.0938 25.4062 12.0938V3C25.4062 2.22337 24.7766 1.59375 24 1.59375H9C8.22338 1.59375 7.59375 2.22337 7.59375 3V12.0938H1.40625C0.629625 12.0938 0 12.7234 0 13.5V24C0 24.7766 0.629625 25.4062 1.40625 25.4062H7.59375V33.0938H1.40625C0.629625 33.0938 0 33.7234 0 34.5V45C0 45.7766 0.629625 46.4062 1.40625 46.4062H46.5938C47.3704 46.4062 48 45.7766 48 45V34.5C48 33.7234 47.3704 33.0938 46.5938 33.0938H40.4062V25.4062H46.5938ZM45.1875 22.5938C43.683 22.5938 34.3936 22.5938 32.9062 22.5938V14.9062H45.1875V22.5938ZM30.0938 22.5938C28.6208 22.5938 19.3889 22.5938 17.9062 22.5938V14.9062H30.0938V22.5938ZM10.4062 4.40625H22.5938V12.0938C21.1208 12.0938 11.8889 12.0938 10.4062 12.0938V4.40625ZM2.8125 22.5938V14.9062H15.0938V22.5938C13.6058 22.5938 4.31672 22.5938 2.8125 22.5938ZM10.4062 25.4062H22.5938V33.0938C21.1208 33.0938 11.8889 33.0938 10.4062 33.0938V25.4062ZM2.8125 35.9062H15.0938V43.5938H2.8125V35.9062ZM17.9062 35.9062H30.0938V43.5938H17.9062V35.9062ZM45.1875 35.9062V43.5938H32.9062V35.9062H45.1875ZM37.5938 33.0938C36.1208 33.0938 26.8889 33.0938 25.4062 33.0938V25.4062H37.5938V33.0938Z"
                                                 fill="#FF5A30" />
                                     </svg>
                                     <h3 class="item__title title">Construction</h3>
                               </li>
                               <li class="tabs__item">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48" fill="none">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48"
+                                          fill="none">
                                           <path d="M42.375 2.90625C40.2971 2.90625 38.4788 4.03866 37.5049 5.71875H1.40625C0.629625 5.71875 0 6.34837 0 7.125V43.6875C0 44.4641 0.629625 45.0938 1.40625 45.0938H42.375C45.4766 45.0938 48 42.5704 48 39.4688V8.53125C48 5.42963 45.4766 2.90625 42.375 2.90625ZM42.375 42.2812C41.8249 42.2812 3.32409 42.2812 2.8125 42.2812V8.53125H36.75V39.4688C36.75 40.2454 37.3796 40.875 38.1562 40.875C38.9329 40.875 39.5625 40.2454 39.5625 39.4688C39.5625 37.9179 40.8242 36.6562 42.375 36.6562C43.9258 36.6562 45.1875 37.9179 45.1875 39.4688C45.1875 41.0196 43.9258 42.2812 42.375 42.2812ZM45.1875 34.5986C44.3597 34.1187 43.3988 33.8438 42.375 33.8438C41.3512 33.8438 40.3903 34.1187 39.5625 34.5986V8.53125C39.5625 6.98044 40.8242 5.71875 42.375 5.71875C43.9258 5.71875 45.1875 6.98044 45.1875 8.53125V34.5986Z"
                                                 fill="#FF5A30" />
                                           <path d="M32.4375 11.3438H7.125C6.34837 11.3438 5.71875 11.9734 5.71875 12.75V38.0625C5.71875 38.8391 6.34837 39.4688 7.125 39.4688H21.1875C21.5605 39.4688 21.9181 39.3205 22.1818 39.0568C22.4456 38.7931 22.5938 38.4354 22.5938 38.0625V35.25C22.5938 33.4166 23.7693 31.8526 25.4062 31.2722V38.0625C25.4062 38.8391 26.0359 39.4688 26.8125 39.4688H32.4375C33.2141 39.4688 33.8438 38.8391 33.8438 38.0625V12.75C33.8438 11.9734 33.2141 11.3438 32.4375 11.3438ZM31.0312 36.6562H28.2188V29.625C28.2188 28.8484 27.5891 28.2188 26.8125 28.2188C22.9355 28.2188 19.7812 31.373 19.7812 35.25V36.6562H8.53125V28.2188H14.1562V32.4375C14.1562 33.2141 14.7859 33.8438 15.5625 33.8438C16.3391 33.8438 16.9688 33.2141 16.9688 32.4375V26.8125C16.9688 26.0359 16.3391 25.4062 15.5625 25.4062H8.53125V14.1562H16.9688V19.7812H12.75C11.9734 19.7812 11.3438 20.4109 11.3438 21.1875C11.3438 21.9641 11.9734 22.5938 12.75 22.5938H18.375H24C24.7766 22.5938 25.4062 21.9641 25.4062 21.1875C25.4062 20.4109 24.7766 19.7812 24 19.7812H19.7812V14.1562H31.0312V36.6562Z"
@@ -87,7 +90,8 @@
                                     <h3 class="item__title title">Project Development</h3>
                               </li>
                               <li class="tabs__item">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48" fill="none">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48"
+                                          fill="none">
                                           <g clip-path="url(#clip0_115_578)">
                                                 <path d="M9.9375 33.8438C7.61128 33.8438 5.71875 35.7363 5.71875 38.0625C5.71875 40.3887 7.61128 42.2812 9.9375 42.2812C12.2637 42.2812 14.1562 40.3887 14.1562 38.0625C14.1562 35.7363 12.2637 33.8438 9.9375 33.8438ZM9.9375 39.4688C9.16209 39.4688 8.53125 38.8379 8.53125 38.0625C8.53125 37.2871 9.16209 36.6562 9.9375 36.6562C10.7129 36.6562 11.3438 37.2871 11.3438 38.0625C11.3438 38.8379 10.7129 39.4688 9.9375 39.4688Z"
                                                       fill="#FF5A30" />
@@ -103,12 +107,104 @@
                                     <h3 class="item__title title">Interior Design</h3>
                               </li>
                               <li class="tabs__item">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48" fill="none">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48"
+                                          fill="none">
                                           <path d="M39.5625 4.21875C39.5625 1.89258 37.6699 0 35.3438 0H7.21875C4.89258 0 3 1.89258 3 4.21875V12.6562C3 14.9824 4.89258 16.875 7.21875 16.875H35.3438C37.6699 16.875 39.5625 14.9824 39.5625 12.6562V11.25H40.9688C41.744 11.25 42.375 11.881 42.375 12.6562V18.2812C42.375 19.0565 41.744 19.6875 40.9688 19.6875H24.0938C21.7676 19.6875 19.875 21.5801 19.875 23.9062V28.125H18.4688C17.692 28.125 17.0625 28.7545 17.0625 29.5312V35.0797L15.6562 40.7955C14.7418 44.4529 17.5052 48 21.2812 48C25.0591 48 27.8196 44.4492 26.9077 40.8007L25.5 35.0797V29.5312C25.5 28.7545 24.8705 28.125 24.0938 28.125H22.6875V23.9062C22.6875 23.131 23.3185 22.5 24.0938 22.5H40.9688C43.2949 22.5 45.1875 20.6074 45.1875 18.2812V12.6562C45.1875 10.3301 43.2949 8.4375 40.9688 8.4375H39.5625V4.21875ZM22.6875 30.9375V33.8438H19.875V30.9375H22.6875ZM21.2812 45.1875C19.344 45.1875 17.9117 43.3693 18.386 41.4727L19.571 36.6562H22.9915L24.1776 41.4778C24.6486 43.3612 23.2255 45.1875 21.2812 45.1875ZM7.21875 2.8125H35.3438C36.119 2.8125 36.75 3.44348 36.75 4.21875V5.625H32.5312C31.1646 5.625 29.417 6.13696 27.3933 6.72949C24.6599 7.53003 21.5621 8.4375 18.4688 8.4375C15.4534 8.4375 13.3275 7.55676 11.4518 6.78003C10.0177 6.18604 8.66345 5.625 7.21875 5.625H5.8125V4.21875C5.8125 3.44348 6.44348 2.8125 7.21875 2.8125ZM36.75 12.6562C36.75 13.4315 36.119 14.0625 35.3438 14.0625H7.21875C6.44348 14.0625 5.8125 13.4315 5.8125 12.6562V8.4375H7.21875C8.10388 8.4375 9.10657 8.85278 10.3755 9.3783C12.3885 10.2122 14.8938 11.25 18.4688 11.25C21.9657 11.25 25.4132 10.24 28.184 9.42883C29.9242 8.91907 31.5681 8.4375 32.5312 8.4375H36.75V12.6562Z"
                                                 fill="#FF5A30" />
                                     </svg>
                                     <h3 class="item__title title">Repairs</h3>
                               </li>
+                        </ul>
+                  </div>
+            </section>
+            <section class="testimonials">
+                  <div class="testimonials-container container">
+                        <h2 class="testimonials-title title">What our clients are saying</h2>
+                        <img class="testimonials-img" src="../assets/testimonials/image.jpg" alt="testimonials">
+                        <div class="testimonials-slider">
+                              <ul class="testimonials-slides" id="testimonials-slides">
+                                    <li class="slider__slide" id="portfolio-slide-1">
+                                          <img src="../assets/testimonials/profile-image.png" alt="profile">
+                                          <div class="review-content">
+                                                <p class="review__text">
+                                                      Ipsum aute sunt aliquip aute et occaecat. Anim minim do cillum
+                                                      eiusmod enim.
+                                                      Consectetur magna cillum consequat minim
+                                                      laboris cillum laboris voluptate minim proident exercitation
+                                                      ullamco.
+                                                </p>
+                                                <div class="review__author">
+                                                      <p class="author__name">Shawn Edwards
+                                                      <p class="author__position">Position, Company name</p>
+                                                </div>
+                                          </div>
+                                    </li>
+                                    <li class="slider__slide" id="portfolio-slide-1">
+                                          <img src="../assets/testimonials/profile-image.png" alt="profile">
+                                          <div class="review-content">
+                                                <p class="review__text">
+                                                      Ipsum aute sunt aliquip aute et occaecat. Anim minim do cillum
+                                                      eiusmod enim.
+                                                      Consectetur magna cillum consequat minim
+                                                      laboris cillum laboris voluptate minim proident exercitation
+                                                      ullamco.
+                                                </p>
+                                                <div class="review__author">
+                                                      <p class="author__name">Shawn Edwards
+                                                      <p class="author__position">Position, Company name</p>
+                                                </div>
+                                          </div>
+                                    </li>
+                                    <li class="slider__slide" id="portfolio-slide-1">
+                                          <img src="../assets/testimonials/profile-image.png" alt="profile">
+                                          <div class="review-content">
+                                                <p class="review__text">
+                                                      Ipsum aute sunt aliquip aute et occaecat. Anim minim do cillum
+                                                      eiusmod enim.
+                                                      Consectetur magna cillum consequat minim
+                                                      laboris cillum laboris voluptate minim proident exercitation
+                                                      ullamco.
+                                                </p>
+                                                <div class="review__author">
+                                                      <p class="author__name">Shawn Edwards
+                                                      <p class="author__position">Position, Company name</p>
+                                                </div>
+                                          </div>
+                                    </li>
+                              </ul>
+                              <div class="slider-btns">
+                                    <div class="slider__btn" id="slide-portfolio-to-left">
+                                          <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                                xmlns="http://www.w3.org/2000/svg">
+                                                <path fill-rule="evenodd" clip-rule="evenodd"
+                                                      d="M9.20711 17.2071C8.81658 17.5976 8.18342 17.5976 7.79289 17.2071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929L7.79289 6.79289C8.18342 6.40237 8.81658 6.40237 9.20711 6.79289C9.59763 7.18342 9.59763 7.81658 9.20711 8.20711L6.41421 11L20 11C20.5523 11 21 11.4477 21 12C21 12.5523 20.5523 13 20 13L6.41421 13L9.20711 15.7929C9.59763 16.1834 9.59763 16.8166 9.20711 17.2071Z"
+                                                      fill="#1E212C" />
+                                          </svg>
+                                    </div>
+                                    <div class="slider__btn" id="slide-portfolio-to-right">
+                                          <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                                xmlns="http://www.w3.org/2000/svg">
+                                                <path fill-rule="evenodd" clip-rule="evenodd"
+                                                      d="M14.7929 6.79289C15.1834 6.40237 15.8166 6.40237 16.2071 6.79289L20.7071 11.2929C21.0976 11.6834 21.0976 12.3166 20.7071 12.7071L16.2071 17.2071C15.8166 17.5976 15.1834 17.5976 14.7929 17.2071C14.4024 16.8166 14.4024 16.1834 14.7929 15.7929L17.5858 13H4C3.44772 13 3 12.5523 3 12C3 11.4477 3.44772 11 4 11H17.5858L14.7929 8.20711C14.4024 7.81658 14.4024 7.18342 14.7929 6.79289Z"
+                                                      fill="#1E212C" />
+                                          </svg>
+                                    </div>
+                              </div>
+                        </div>
+                  </div>
+            </section>
+            <section class="clients">
+                  <div class="clients-container container">
+                        <h2 class="clients-title title">Our clients</h2>
+                        <ul class="clients-list">
+                              <li class="client-item"><img src="../assets/partners/InDepth Consulting.png" alt="logo">
+                              </li>
+                              <li class="client-item"><img src="../assets/partners/Higher Fit.png" alt="logo"></li>
+                              <li class="client-item"><img src="../assets/partners/Sentinal Consulting.png" alt="logo">
+                              </li>
+                              <li class="client-item"><img src="../assets/partners/Happy Home.png" alt="logo"></li>
+                              <li class="client-item"><img src="../assets/partners/For Sale.png" alt="logo"></li>
+                              <li class="client-item"><img src="../assets/partners/Sunset Realty.png" alt="logo"></li>
                         </ul>
                   </div>
             </section>
