fix visual bugs

--- a/pages/services.html
+++ b/pages/services.html
@@ -15,7 +15,7 @@
                   <nav class="header__nav">
                         <ul class="nav__list">
                               <li class="nav__item"><a class="nav__link" href="./about.html">About Us</a></li>
-                              <li class="nav__item"><a class="nav__link" href="./services.html">Services</a></li>
+                              <li class="nav__item active"><a class="nav__link" href="./services.html">Services</a></li>
                               <li class="nav__item"><a class="nav__link" href="./work.html">Work</a></li>
                               <li class="nav__item"><a class="nav__link" href="./news.html">News</a></li>
                               <li class="nav__item"><a class="nav__link" href="./contacts.html">Contacts</a></li>
@@ -52,7 +52,7 @@
                   </div>
             </section>
             <sectoin class="services-page">
-                  <div class="services-page__container container">
+                  <div class="services-page-container container">
                         <ul class="services-page__list">
                               <li class="services-page__item">
                                     <img src="../assets/services/constructions.jpg" alt="constructions"
