--- a/pages/servicesDesign.html
+++ b/pages/servicesDesign.html
@@ -18,7 +18,7 @@
               <a class="nav__link" href="./about.html">About Us</a>
             </li>
             <li class="nav__item">
-              <a class="nav__link" href="./services.html">Services</a>
+              <a class="nav__link active" href="./services.html">Services</a>
             </li>
             <li class="nav__item">
               <a class="nav__link" href="./work.html">Work</a>
@@ -74,7 +74,7 @@
         </div>
       </section>
       <section class="offer">
-        <div class="offer__container container">
+        <div class="offer-container container">
           <img src="../assets/services/offer.jpg" alt="offer" />
           <div class="offer__content">
             <h2 class="offer__title title">We offer</h2>
@@ -102,7 +102,7 @@
         </div>
       </section>
       <section class="steps">
-        <div class="steps__container container">
+        <div class="steps-container container">
           <h2 class="steps__title title">That’s how we do it</h2>
           <ul class="steps__list">
             <li class="steps__item">
@@ -139,7 +139,7 @@
         </div>
       </section>
       <section class="benefits">
-        <div class="benefits__container container">
+        <div class="benefits-container container">
           <h2 class="benefits__title title">Our benefits</h2>
           <p class="benefits__subtitle subtitle">
             Our mission is to set the highest standards for construction sphere.
@@ -315,7 +315,7 @@
         </div>
       </section>
       <section class="pricing">
-        <div class="pricing__container container">
+        <div class="pricing-container container">
           <h2 class="pricing__title title">Pricing</h2>
           <p class="pricing__subtitle subtitle">
             We offer you three categories of construction.
