--- a/pages/work.html
+++ b/pages/work.html
@@ -16,7 +16,7 @@
                         <ul class="nav__list">
                               <li class="nav__item"><a class="nav__link" href="./about.html">About Us</a></li>
                               <li class="nav__item"><a class="nav__link" href="./services.html">Services</a></li>
-                              <li class="nav__item"><a class="nav__link" href="./work.html">Work</a></li>
+                              <li class="nav__item"><a class="nav__link active" href="./work.html">Work</a></li>
                               <li class="nav__item"><a class="nav__link" href="./news.html">News</a></li>
                               <li class="nav__item"><a class="nav__link" href="./contacts.html">Contacts</a></li>
                         </ul>
@@ -52,7 +52,7 @@
                   </div>
             </section>
             <section class="tabs">
-                  <div class="tabs__container container">
+                  <div class="tabs-container container">
                         <ul class="tabs__list">
                               <li class="tabs__item active">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48"
